# bme_Project

./: .gitignore  README.md  cleanup_status.py
analysis/: analysis.ipynb  (+2 more)
e_sniffer_bme690_poc/: .gitignore  Makefile  README.md  capture_payload.py  pyproject.toml  requirements.txt  status_debug.py  test_coines.py
e_sniffer_bme690_poc/collector/: README.md  __init__.py  bme680_driver.py  collect.py  device.py  label_store.py  label_templates.json  logger.py  profiles.py  requirements.txt  runtime.py  ui.py
e_sniffer_bme690_poc/collector/tests/: test_profiles.py
e_sniffer_bme690_poc/dataprep/: README.md  __init__.py  build.py  features.py  io.py  schemas.py  utils.py
e_sniffer_bme690_poc/dataprep/tests/: test_dataprep.py
e_sniffer_bme690_poc/detector/: README.md  __init__.py  app.py  controller.py  ui.py
e_sniffer_bme690_poc/heater_profiles/: Cleansing-Cycle#2.bmeprofile  Cleansing-Cycle.bmeprofile  HP-322.bmeprofile  HP-502-10sDwell.bmeprofile  HP-502-20sDwell.bmeprofile  HP-502-5sDwell.bmeprofile  HP-502.bmeprofile
e_sniffer_bme690_poc/live_test/: README.md  app.py  features_rt.py  streaming.py  ui.py
e_sniffer_bme690_poc/live_test/tests/: test_live_test.py
e_sniffer_bme690_poc/logs/2025-10-10/: bme690_Natural_Air_161559.csv  bme690_Natural_Air_161943.csv  bme690_Natural_Air_163221.csv  (+3 more)
e_sniffer_bme690_poc/training/: README.md  __init__.py  plots.py  predict_sample.py  train.py  utils.py
e_sniffer_bme690_poc/training_cnn/: __init__.py  data.py  model.py  train.py
e_sniffer_bme690_poc/workflow/: README.md  __init__.py  app.py  controller.py  ui.py
(+43 files in other folders)
